schema/testdata/validation_relationships_attr_must_be_on_non_repeated_field/schema.keel
model Author {
    fields {
        unused Post
    }
}

model Post {
    fields {
        author Author[] @relation(written)
    }
}
