schema/testdata/errors/relationships_attr_must_be_on_non_repeated_field.keel
model Author {
    fields {
        unused Post
    }
}

model Post {
    fields {
        //expect-error:25:34:RelationshipError:The @relation attribute must be defined on the other side of a one to many relationship
        author Author[] @relation(written)
    }
}
